# smart-water-docs

./: 404.html  README  index.html  mkdocs.yml  pyproject.toml
blog/: index.html
docs/: index.md
docs/user-guide/: extra-info.md  quick-start.md
docs/user-guide/advanced-setup/: modify-firmware.md  self-hosted-deployment.md
public/assets/: Chirpstak-integrations.webp:Zone.Identifier
search/: search_index.json
user-guide/advanced-setup/modify-firmware/: index.html
user-guide/advanced-setup/self-hosted-deployment/: index.html
user-guide/extra-info/: index.html
user-guide/quick-start/: index.html
